--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webgyakpizza",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "indito.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,9 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "mysql2": "^3.15.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
